.env.example updated

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+SPA_URL=http://localhost:3000
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -21,11 +22,24 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
+#SESSION_DOMAIN=
+#SANCTUM_STATEFUL_DOMAINS=
+
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+# MAILTRAP #
+#MAIL_MAILER=smtp
+#MAIL_HOST=smtp.mailtrap.io
+#MAIL_PORT=2525
+#MAIL_USERNAME=b0c28ecf52a1cc
+#MAIL_PASSWORD=e83d8d5aacb3aa
+#MAIL_ENCRYPTION=tls
+#MAIL_FROM_ADDRESS=no.reply@sandercokart.com
+#MAIL_FROM_NAME="${APP_NAME}"
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
