--- a/.env.local.example
+++ b/.env.local.example
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:uRctDrVKs+HlQWuaJY4ZUpj8SGS9dA5duKOSRx4seU8=
 APP_DEBUG=true
-APP_URL=http://localhost
-SPA_URL=http://localhost:3000
+APP_URL="http://localhost:3000"
+SPA_URL="http://localhost:3000"
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sandercokart
+DB_DATABASE=sandercokart_api
 DB_USERNAME=root
 DB_PASSWORD=
 
