--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.40",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "owen-it/laravel-auditing": "^12.0"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
