--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/framework": "^8.40",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "owen-it/laravel-auditing": "^12.0"
+        "owen-it/laravel-auditing": "^12.0",
+        "spatie/laravel-sluggable": "^3.1"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
