--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "owen-it/laravel-auditing": "^12.0",
+        "spatie/laravel-medialibrary": "^9.0.0",
         "spatie/laravel-sluggable": "^3.1"
     },
     "require-dev": {
