large progress update

--- a/.env.local.example
+++ b/.env.local.example
@@ -4,6 +4,8 @@ APP_KEY=base64:uRctDrVKs+HlQWuaJY4ZUpj8SGS9dA5duKOSRx4seU8=
 APP_DEBUG=true
 APP_URL="http://localhost:3000"
 
+TELESCOPE_ENABLED=true
+
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
