--- a/composer.json
+++ b/composer.json
@@ -2,29 +2,34 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0",
         "andreaselia/laravel-api-to-postman": "^1.7",
         "fideloper/proxy": "^4.4",
+        "fidum/laravel-eloquent-morph-to-one": "^2.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
-        "laravel/framework": "^8.40",
-        "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5",
+        "laravel/framework": "^v8.80.0",
+        "laravel/sanctum": "^2.14",
+        "laravel/tinker": "^2.7.0",
         "owen-it/laravel-auditing": "^12.0",
-        "spatie/laravel-sluggable": "^3.1"
+        "spatie/laravel-sluggable": "^3.3.0"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.10",
-        "facade/ignition": "^2.5",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/sail": "^1.0.1",
-        "mockery/mockery": "^1.4.2",
-        "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3"
+        "barryvdh/laravel-ide-helper": "^2.11",
+        "facade/ignition": "^2.17.4",
+        "fakerphp/faker": "^v1.17.0",
+        "laravel/sail": "^1.13.1",
+        "laravel/telescope": "^4.7",
+        "mockery/mockery": "^1.5.0",
+        "nunomaduro/collision": "^5.11",
+        "phpunit/phpunit": "^9.5.12"
     },
     "autoload": {
         "psr-4": {
@@ -55,7 +60,9 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope"
+            ]
         }
     },
     "config": {
