--- a/.env.local.example
+++ b/.env.local.example
@@ -1,36 +1,40 @@
-APP_NAME=Laravel
+APP_NAME=sandercokar
 APP_ENV=local
-APP_KEY=base64:uRctDrVKs+HlQWuaJY4ZUpj8SGS9dA5duKOSRx4seU8=
+APP_KEY=base64:m1sFH2UudE7pqVg6RnNSEfOUoiiM5GaLgSBp3cjd+q4=
 APP_DEBUG=true
-APP_URL="http://localhost:3000"
+APP_URL="http://192.168.2.160:3000"
+LOCAL_URL="http://192.168.2.160"
 
 TELESCOPE_ENABLED=true
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=sandercokart_api
-DB_USERNAME=root
-DB_PASSWORD=
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=sandercokart_api
+#DB_USERNAME=root
+#DB_PASSWORD=
+DB_CONNECTION=sqlite
+DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
-#SESSION_DOMAIN=
-#SANCTUM_STATEFUL_DOMAINS=
+SESSION_DOMAIN=192.168.2.160
+SANCTUM_STATEFUL_DOMAINS=192.168.2.160:3000
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=192.168.2.160
+#MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+#REDIS_HOST=127.0.0.1
+#REDIS_PASSWORD=null
+#REDIS_PORT=6379
 
 # MAILTRAP #
 MAIL_MAILER=smtp
@@ -51,16 +55,16 @@ MAIL_FROM_NAME="${APP_NAME}"
 #MAIL_FROM_ADDRESS=null
 #MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+#AWS_ACCESS_KEY_ID=
+#AWS_SECRET_ACCESS_KEY=
+#AWS_DEFAULT_REGION=us-east-1
+#AWS_BUCKET=
+#AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+#PUSHER_APP_ID=
+#PUSHER_APP_KEY=
+#PUSHER_APP_SECRET=
+#PUSHER_APP_CLUSTER=mt1
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+#MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+#MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
