--- a/.env.prod.example
+++ b/.env.prod.example
@@ -1,8 +1,11 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:uRctDrVKs+HlQWuaJY4ZUpj8SGS9dA5duKOSRx4seU8=
 APP_DEBUG=true
 APP_URL="https://sandercokart.com"
+LOCAL_URL="https://api.sandercokart.com"
+
+TELESCOPE_ENABLED=true
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -16,29 +19,29 @@ DB_PASSWORD="6BG65k3MatsQnPpE3Bqg8zNHR84#9p5xb^E&yU*H^D4RwGRMTo"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
-#SESSION_DOMAIN=
-#SANCTUM_STATEFUL_DOMAINS=
+SESSION_DOMAIN=api.sandercokart.com
+SANCTUM_STATEFUL_DOMAINS=sandercokart.com
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+#REDIS_HOST=127.0.0.1
+#REDIS_PASSWORD=null
+#REDIS_PORT=6379
 
 # MAILTRAP #
-MAIL_MAILER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=b0c28ecf52a1cc
-MAIL_PASSWORD=e83d8d5aacb3aa
-MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=no.reply@sandercokart.com
-MAIL_FROM_NAME="${APP_NAME}"
+#MAIL_MAILER=smtp
+#MAIL_HOST=smtp.mailtrap.io
+#MAIL_PORT=2525
+#MAIL_USERNAME=b0c28ecf52a1cc
+#MAIL_PASSWORD=e83d8d5aacb3aa
+#MAIL_ENCRYPTION=tls
+#MAIL_FROM_ADDRESS=no.reply@sandercokart.com
+#MAIL_FROM_NAME="${APP_NAME}"
 
 #MAIL_MAILER=smtp
 #MAIL_HOST=mailhog
@@ -49,16 +52,16 @@ MAIL_FROM_NAME="${APP_NAME}"
 #MAIL_FROM_ADDRESS=null
 #MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+#AWS_ACCESS_KEY_ID=
+#AWS_SECRET_ACCESS_KEY=
+#AWS_DEFAULT_REGION=us-east-1
+#AWS_BUCKET=
+#AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+#PUSHER_APP_ID=
+#PUSHER_APP_KEY=
+#PUSHER_APP_SECRET=
+#PUSHER_APP_CLUSTER=mt1
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+#MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+#MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
