--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,11 @@
     "require": {
         "php": "^8.0",
         "andreaselia/laravel-api-to-postman": "^1.7",
-        "fideloper/proxy": "^4.4",
         "fidum/laravel-eloquent-morph-to-one": "^2.1",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.7",
-        "laravel/framework": "^v8.80.0",
+        "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
         "laravel/tinker": "^2.7.0",
         "owen-it/laravel-auditing": "^12.0",
@@ -23,12 +22,12 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.11",
-        "facade/ignition": "^2.17.4",
+        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^v1.17.0",
         "laravel/sail": "^1.13.1",
         "laravel/telescope": "^4.7",
         "mockery/mockery": "^1.5.0",
-        "nunomaduro/collision": "^5.11",
+        "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.12"
     },
     "autoload": {
