--- a/.env.testing.example
+++ b/.env.testing.example
@@ -1,4 +1,4 @@
-APP_NAME=sandercokart.com
+APP_NAME=sandercokar
 APP_ENV=local
 APP_KEY=base64:m1sFH2UudE7pqVg6RnNSEfOUoiiM5GaLgSBp3cjd+q4=
 APP_DEBUG=true
