--- a/.env.testing
+++ b/.env.testing
@@ -1,21 +1,24 @@
 APP_NAME=sandercokart.com
-APP_ENV=production
-APP_KEY=base64:uRctDrVKs+HlQWuaJY4ZUpj8SGS9dA5duKOSRx4seU8=
-APP_DEBUG=false
-APP_URL="https://sandercokart.com"
-LOCAL_URL="https://api.sandercokart.com"
+APP_ENV=local
+APP_KEY=base64:m1sFH2UudE7pqVg6RnNSEfOUoiiM5GaLgSBp3cjd+q4=
+APP_DEBUG=true
+APP_URL="http://192.168.2.160:3000"
+LOCAL_URL="http://192.168.2.160"
 
 TELESCOPE_ENABLED=false
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=sandercokart.com
-DB_USERNAME=sandercokart
-DB_PASSWORD="6BG65k3MatsQnPpE3Bqg8zNHR84#9p5xb^E&yU*H^D4RwGRMTo"
+#DB_CONNECTION=mysql
+#DB_HOST=127.0.0.1
+#DB_PORT=3306
+#DB_DATABASE=sandercokart_api
+#DB_USERNAME=root
+#DB_PASSWORD=
+DB_CONNECTION=sqlite
+DB_DATABASE=D:\Projects\sandercokart.com\api\database\testing.sqlite
+DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,24 +27,25 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
-SESSION_DOMAIN=api.sandercokart.com
-SANCTUM_STATEFUL_DOMAINS=sandercokart.com
+SESSION_DOMAIN=192.168.2.160
+SANCTUM_STATEFUL_DOMAINS=192.168.2.160:3000
 
-MEMCACHED_HOST=127.0.0.1
+MEMCACHED_HOST=192.168.2.160
+#MEMCACHED_HOST=127.0.0.1
 
 #REDIS_HOST=127.0.0.1
 #REDIS_PASSWORD=null
 #REDIS_PORT=6379
 
 # MAILTRAP #
-#MAIL_MAILER=smtp
-#MAIL_HOST=smtp.mailtrap.io
-#MAIL_PORT=2525
-#MAIL_USERNAME=b0c28ecf52a1cc
-#MAIL_PASSWORD=e83d8d5aacb3aa
-#MAIL_ENCRYPTION=tls
-#MAIL_FROM_ADDRESS=no.reply@sandercokart.com
-#MAIL_FROM_NAME="${APP_NAME}"
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=b0c28ecf52a1cc
+MAIL_PASSWORD=e83d8d5aacb3aa
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=no.reply@sandercokart.com
+MAIL_FROM_NAME="${APP_NAME}"
 
 #MAIL_MAILER=smtp
 #MAIL_HOST=mailhog
