--- a/composer.json
+++ b/composer.json
@@ -22,13 +22,15 @@
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.11",
-        "spatie/laravel-ignition": "^1.0",
         "fakerphp/faker": "^v1.17.0",
         "laravel/sail": "^1.13.1",
         "laravel/telescope": "^4.7",
         "mockery/mockery": "^1.5.0",
         "nunomaduro/collision": "^6.1",
-        "phpunit/phpunit": "^9.5.12"
+        "pestphp/pest": "^1.21",
+        "pestphp/pest-plugin-laravel": "^1.2",
+        "phpunit/phpunit": "^9.5.12",
+        "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
         "psr-4": {
