have to test compromised emails

--- a/.env.testing.example
+++ b/.env.testing.example
@@ -2,8 +2,8 @@ APP_NAME=sandercokar
 APP_ENV=local
 APP_KEY=base64:m1sFH2UudE7pqVg6RnNSEfOUoiiM5GaLgSBp3cjd+q4=
 APP_DEBUG=true
-APP_URL="http://192.168.2.160:3000"
-LOCAL_URL="http://192.168.2.160"
+APP_URL=http://192.168.2.160:3000
+LOCAL_URL=http://192.168.2.160
 
 TELESCOPE_ENABLED=true
 
