--- a/.env.testing.example
+++ b/.env.testing.example
@@ -1,11 +1,9 @@
-APP_NAME=sandercokar
+APP_NAME=sandercokart.com
 APP_ENV=local
 APP_KEY=base64:m1sFH2UudE7pqVg6RnNSEfOUoiiM5GaLgSBp3cjd+q4=
 APP_DEBUG=true
-APP_URL=http://192.168.2.160:3000
-LOCAL_URL=http://192.168.2.160
-
-TELESCOPE_ENABLED=true
+APP_URL="127.0.0.1:3000"
+LOCAL_URL="127.0.0.1:8000"
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -17,6 +15,7 @@ LOG_LEVEL=debug
 #DB_USERNAME=root
 #DB_PASSWORD=
 DB_CONNECTION=sqlite
+DB_DATABASE=D:\Projects\sandercokart.com\api\database\testing.sqlite
 DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
