working on new markdown editor

--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.2",
         "phpunit/phpunit": "^9.5.12",
+        "psy/psysh": "0.11.2",
         "spatie/laravel-ignition": "^1.0"
     },
     "autoload": {
