split mobile and local environment and added more example files

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,22 +2,20 @@ APP_NAME=sandercokart.com
 APP_ENV=local
 APP_KEY=base64:m1sFH2UudE7pqVg6RnNSEfOUoiiM5GaLgSBp3cjd+q4=
 APP_DEBUG=true
-APP_URL="http://192.168.2.160:3000"
-LOCAL_URL="http://192.168.2.160"
-
-TELESCOPE_ENABLED=true
+APP_URL="http://localhost:3000"
+LOCAL_URL="http://localhost"
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-#DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=sandercokart_api
-#DB_USERNAME=root
-#DB_PASSWORD=
-DB_CONNECTION=sqlite
-DB_FOREIGN_KEYS=true
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=sandercokart_api
+DB_USERNAME=root
+DB_PASSWORD=
+#DB_CONNECTION=sqlite
+#DB_FOREIGN_KEYS=true
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,10 +24,10 @@ QUEUE_CONNECTION=sync
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 
-SESSION_DOMAIN=192.168.2.160
-SANCTUM_STATEFUL_DOMAINS=192.168.2.160:3000
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
 
-MEMCACHED_HOST=192.168.2.160
+MEMCACHED_HOST=localhost
 #MEMCACHED_HOST=127.0.0.1
 
 #REDIS_HOST=127.0.0.1
