--- a/.env.mobile.example
+++ b/.env.mobile.example
@@ -5,8 +5,6 @@ APP_DEBUG=true
 APP_URL="http://192.168.2.17:3000"
 LOCAL_URL="http://192.168.2.17:80"
 
-TELESCOPE_ENABLED=true
-
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
@@ -68,3 +66,24 @@ MAIL_FROM_NAME="${APP_NAME}"
 
 #MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 #MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+#RAY
+RAY_ENABLED=true
+SEND_CACHE_TO_RAY=false
+SEND_DUMPS_TO_RAY=true
+SEND_JOBS_TO_RAY=false
+SEND_LOG_CALLS_TO_RAY=true
+SEND_QUERIES_TO_RAY=false
+SEND_DUPLICATE_QUERIES_TO_RAY=false
+SEND_SLOW_QUERIES_TO_RAY=false
+RAY_SLOW_QUERY_THRESHOLD_IN_MS=500
+SEND_REQUESTS_TO_RAY=false
+SEND_HTTP_CLIENT_REQUESTS_TO_RAY=false
+SEND_VIEWS_TO_RAY=false
+SEND_EXCEPTIONS_TO_RAY=true
+SEND_DEPRECATED_NOTICES_TO_RAY=false
+RAY_HOST=localhost
+RAY_PORT=23517
+RAY_REMOTE_PATH=
+RAY_LOCAL_PATH=
